# Jurassic-Spark-Analog-Computer

./: README.md
documentation/: Second_Test.tex
mechatronic/: mechatronic.ino  mechatronic_Rev2.ino
oscilloscope/: CMakeLists.txt  bluetoothexporter.cpp  bluetoothexporter.h  datasource.cpp  datasource.h  deploy.fish  main.cpp  toolchain.cmake
oscilloscope/old/: CMakePresets.json
oscilloscope/old/qml/: scopeScreen.qml
oscilloscope/old/scripts/: run_native.sh
oscilloscope/old/src/: mainwindow.ui  pmod5_ad7193.cpp
oscilloscope/qml/qmloscilloscope/: AxisSettingsPanel.qml  ControlPanel.qml  ExportDataPanel.qml  MultiButton.qml  ScopeView.qml  SettingsPanel.qml  SplashScreen.qml  ToggleButton.qml  TriggerSettingsPanel.qml  main.qml
oscilloscope/qmloscilloscope/: CMakeLists.txt
oscilloscope/qmloscilloscope/qml/qmloscilloscope/: ControlPanel.qml  MultiButton.qml  SettingsPanel.qml  ToggleButton.qml  main.qml
oscilloscope/scope_app/: CMakeLists.txt  datasource.cpp  datasource.h  main.cpp  resources.qrc
oscilloscope/scope_app/qml/qmloscilloscope/: AxisSettings.qml  ControlPanel.qml  ScopeView.qml  SettingsPanel.qml  SnapperSlider.qml  ToggleButton.qml  main.qml
oscilloscope/src/: ad7193_protocol.h  main.cpp  main_old.cpp  mainwindow.cpp  mainwindow.h
pcb_layout/: Adder.PcbDoc  ECEN4620_JurassicSpark_SubModule.PcbDoc  Gain.PcbDoc  Integrator.PcbDoc  Integrator.PrjPcb  Mechatronic.PcbDoc  PiZero2W.PrjPcb  PiZero2W_Hat.PcbDoc  Power_Left.PcbDoc  Power_Middle.PcbDoc  Power_Right.PcbDoc
pcb_schematic/: Adder.SchDoc  Gain.SchDoc  Integrator.SchDoc  (+6 more)
(+9 files in other folders)
